--- a/chordsApp.css
+++ b/chordsApp.css
@@ -620,6 +620,7 @@ textarea {
     }
 
     .string {
+      margin-top: 0px;
       width: 3px;
       height: 100%;
     }
@@ -628,6 +629,13 @@ textarea {
       width: 90%;
       height: 5px;
       z-index: 2;
+    }
+
+    .active {
+      left: -10px;
+      right: 0;
+      bottom: 0;
+      top: 20px;
     }
 
 
